// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductFeatures stories snapshot > HtmlContent story renders and matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-3"
  >
    <div
      class="flex items-center gap-2 text-sm text-foreground"
    >
      <span
        class="font-semibold"
      >
        Features
        :
      </span>
    </div>
    <div>
      <ul>
        <li>
          HTML Feature 1
        </li>
        <li>
          HTML Feature 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ProductFeatures stories snapshot > PlainText story renders and matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-3"
  >
    <div
      class="flex items-center gap-2 text-sm text-foreground"
    >
      <span
        class="font-semibold"
      >
        Features
        :
      </span>
    </div>
    <ul
      class="flex flex-col gap-1.5 list-none m-0 p-0 text-sm text-foreground"
    >
      <li
        class="flex items-center gap-2"
      >
        <span
          aria-hidden="true"
          class="h-1.5 w-1.5 flex-shrink-0 rounded-full bg-primary"
        />
        <span>
          Feature 1
        </span>
      </li>
      <li
        class="flex items-center gap-2"
      >
        <span
          aria-hidden="true"
          class="h-1.5 w-1.5 flex-shrink-0 rounded-full bg-primary"
        />
        <span>
          Feature 2
        </span>
      </li>
      <li
        class="flex items-center gap-2"
      >
        <span
          aria-hidden="true"
          class="h-1.5 w-1.5 flex-shrink-0 rounded-full bg-primary"
        />
        <span>
          Feature 3
        </span>
      </li>
    </ul>
  </div>
</div>
`;
